# edi

./: .gitignore  CMakeLists.txt  README.md  run.sh  valgrind.sh
bin2h/: .gitignore  main.c
include/: cursor.h  globals.h  macros.h  render.h  utils.h
src/: cursor.c  globals.c  main.c  render.c  utils.c
